package com.myzuji.study.gof23.adapter.classadapter;

/**
 * 说明
 *
 * @author shine
 * @date 2020/02/05
 */
public interface Voltage5V {

    int output5v();
}
